se agrego formulario de adopcion

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a class="enlaces" href="https://www.adoptamemexico.com/adopcion-perros" target="_blank">Adóptame Mexico</a>
   
     <h2 class="animales">Gatos</h2>
+    <h2 > <a class="formularios" href="./formulario de adopcion.html" target="_blank"> Da click aqui para empezar el proceso de adopcion</a> </a></h2>
     
     <h3 class="animalesnom">Simba</h3>
     <div class="container">
